<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.jackandphantom.mytodo.addittask.TaskEditViewModel" />

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ncv_title"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/yantramanav_medium"
            android:background="@null"
            android:hint="@string/note__title"
            android:text="@={viewModel.title}"
            android:inputType="textCapWords"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ncv_note"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="@+id/ncv_title"
        app:layout_constraintStart_toStartOf="@+id/ncv_title"
        app:layout_constraintTop_toBottomOf="@+id/ncv_title"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:gravity="top|start"
            android:fontFamily="@font/yantramanav"
            android:hint="@string/note_description"
            android:text="@={viewModel.description}"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphButton
        android:id="@+id/button_save"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/notes_save"
        android:onClick="@{() -> viewModel.saveTask()}"
        app:layout_constraintBottom_toTopOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="@+id/ncv_note"
        app:layout_constraintStart_toStartOf="@+id/ncv_note" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/button_delete"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notes_delete"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:onClick="@{() -> viewModel.deleteTask()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_save"
        app:layout_constraintStart_toStartOf="@+id/button_save"
        app:neumorph_backgroundColor="@android:color/holo_red_light" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
